--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -17,8 +17,8 @@ configurations.all {
 }
 
 dependencies {
-    implementation 'androidx.fragment:fragment:1.2.0'
-    implementation 'androidx.core:core:1.10.1'
+    implementation 'androidx.fragment:fragment:1.8.8'
+    implementation 'androidx.core:core:1.16.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.6'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
@@ -65,13 +65,13 @@ dependencies {
     }
     implementation 'com.google.android.recaptcha:recaptcha:18.4.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 }
 
 def isWindows = String.valueOf(DefaultNativePlatform.currentOperatingSystem.toFamilyName() == OperatingSystemFamily.WINDOWS)
 android {
-    compileSdkVersion 34
-    buildToolsVersion '34.0.0'
+    compileSdk 35
+    buildToolsVersion '35.0.0'
     ndkVersion "21.4.7075529"
 
     sourceSets.main.jniLibs.srcDirs = ['./jni/']
@@ -88,21 +88,17 @@ android {
         disable 'BlockedPrivateApi'
     }
 
-    dexOptions {
-        jumboMode = true
-    }
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
 
         coreLibraryDesugaringEnabled true
     }
 
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 34
+        minSdkVersion 21
+        targetSdkVersion 35
 
         vectorDrawables.generatedDensities = ['mdpi', 'hdpi', 'xhdpi', 'xxhdpi']
 
@@ -115,7 +111,9 @@ android {
             }
         }
     }
-
+    buildFeatures {
+        buildConfig true
+    }
     buildTypes {
         debug {
             jniDebuggable true
