--- a/TMessagesProj_AppHockeyApp/build.gradle
+++ b/TMessagesProj_AppHockeyApp/build.gradle
@@ -20,10 +20,10 @@ configurations.all {
 
 dependencies {
     implementation project(':TMessagesProj')
-    implementation 'androidx.fragment:fragment:1.2.0'
+    implementation 'androidx.fragment:fragment:1.8.8'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.core:core:1.10.1'
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.core:core:1.16.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
     implementation files('../TMessagesProj/libs/libgsaverification-client.aar')
 
     implementation "com.microsoft.appcenter:appcenter-distribute:3.3.1"
@@ -35,8 +35,8 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 34
-    buildToolsVersion '34.0.0'
+    compileSdk  35
+    buildToolsVersion '35.0.0'
 
     defaultConfig.applicationId = APP_PACKAGE
 
@@ -47,14 +47,13 @@ android {
         disable 'ExtraTranslation'
         disable 'BlockedPrivateApi'
     }
-
-    dexOptions {
-        jumboMode = true
+    buildFeatures {
+        buildConfig = true  // 这是新的写法
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
 
         coreLibraryDesugaringEnabled true
     }
@@ -165,7 +164,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 34
         versionName APP_VERSION_NAME
         ndkVersion "21.4.7075529"
